@@ -1,3 +1,9 @@
+2015-10-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix broken
+	array initialization, which meant that incorrect method signatures
+	were generated for methods with more than four arguments.
+
 2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STRemoteConversation.m
